<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ben12345rocks</groupId>
	<artifactId>VotifierPlus</artifactId>
	<version>1.0.1</version>
	<packaging>jar</packaging>

	<name>VotifierPlus</name>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<github.global.server>github</github.global.server>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

	</properties>
	<distributionManagement>
		<repository>
			<id>internal.repo</id>
			<name>Temporary Staging Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>
	<build>
		<resources>
			<resource>
				<directory>Resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>plugin.yml</include>
					<include>bungee.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>Resources</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
		<sourceDirectory>src</sourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.projectlombok</groupId>
										<artifactId>lombok-maven-plugin</artifactId>
										<versionRange>[1,)</versionRange>
										<goals>
											<goal>delombok</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<finalName>${project.name}</finalName>
					<excludes>
						<exclude>test/</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.2.0</version>
				<executions>
					<execution>
						<id>delombok</id>
						<phase>deploy</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
						<configuration>
							<addOutputDirectory>false</addOutputDirectory>
							<outputDirectory>${project.basedir}/target/delombok</outputDirectory>
							<sourceDirectory>${project.basedir}/src</sourceDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>2.4.3</version>
				<configuration>
					<shadedArtifactAttached>false</shadedArtifactAttached>
					<relocations>
						<!-- Lets relocate the shaded API so we dont cause any conflicts with 
							other plugins -->
						<relocation>
							<pattern>com.Ben12345rocks.AdvancedCore</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.AdvancedCore</shadedPattern>
						</relocation>
						<!-- Lets relocate the shaded API so we dont cause any conflicts with 
							other plugins -->
						<relocation>
							<pattern>net.pl3x.bukkit.chatapi</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
						</relocation>
						<relocation>
							<pattern>me.mrten.mysqlapi</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.mysqlapi</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.zaxxer.HikariCP</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.HikariCP</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.zaxxer.hikari</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.hikari</shadedPattern>
						</relocation>
						<relocation>
							<pattern>org.slf4j.slf4j-simple</pattern>
							<shadedPattern>${project.groupId}.${project.artifactId}.slf4j-simple</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<artifactSet>
								<!-- Lets exclude google code, because the server already has this 
									code in it (guava, etc) -->
								<excludes>
									<exclude>com.google.*:*</exclude>
								</excludes>
							</artifactSet>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>deploy</phase>
						<configuration>
							<sourcepath>${project.basedir}/target/delombok</sourcepath>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.github</groupId>
				<artifactId>site-maven-plugin</artifactId>
				<version>0.12</version>
				<executions>
					<execution>
						<id>javadoc</id>
						<goals>
							<goal>site</goal>
						</goals>
						<phase>deploy</phase>
						<configuration>
							<message>Maven javadoc for ${project.version}</message>
							<noJekyll>true</noJekyll>
							<outputDirectory>${project.build.directory}/apidocs
							</outputDirectory>
							<branch>refs/heads/gh-pages</branch>
							<includes>
								<include>**/*</include>
							</includes>
							<repositoryName>VotingPlugin</repositoryName>
							<repositoryOwner>Ben12345rocks</repositoryOwner>
							<server>github</server>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<phase>install</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${user.home}/Documents/Test Server/plugins</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}/target</directory>
									<includes>
										<include>${project.artifactId}.jar</include>
									</includes>
								</resource>
							</resources>
							<overwrite>true</overwrite>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
		</repository>
		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>com.github.Ben12345rocks</groupId>
			<artifactId>AdvancedCore</artifactId>
			<version>master-SNAPSHOT</version>
		</dependency>

		<!-- <dependency> <groupId>com.Ben12345rocks</groupId> <artifactId>AdvancedCore</artifactId> 
			<version>LATEST</version> <scope>compile</scope> </dependency> -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.15.2-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>LATEST</version>
			<scope>provided</scope>
		</dependency>
		
	</dependencies>
</project>